<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>no.nav</groupId>
	<artifactId>bidrag-samhandler</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>bidrag-samhandler</name>
	<properties>
		<java.version>21</java.version>
		<kotlin.version>2.1.21</kotlin.version>
		<bidrag-felles.version>2025.06.06.135104</bidrag-felles.version>
		<logback-encoder.version>8.0</logback-encoder.version>
		<springdoc-openapi-ui.version>2.8.8</springdoc-openapi-ui.version>
		<token-support.version>5.0.29</token-support.version>
		<kotest.version>5.9.1</kotest.version>
		<jakarta.xml.ws-api.version>4.0.1</jakarta.xml.ws-api.version>
		<jaxws.version>4.0.3</jaxws.version>
		<mockk.version>1.13.17</mockk.version>
		<kotlin-logging-jvm.version>7.0.7</kotlin-logging-jvm.version>
		<ktlint.version>1.6.0</ktlint.version>
		<hypersistence-utils-hibernate.version>3.9.5</hypersistence-utils-hibernate.version>
		<spring-cloud-contract-wiremock.version>4.2.0</spring-cloud-contract-wiremock.version>
	</properties>

	<repositories>
		<repository>
			<id>github</id>
			<url>https://maven.pkg.github.com/navikt/bidrag-felles</url>
		</repository>
		<repository>
			<id>confluent</id>
			<name>Confluent kafka</name>
			<url>https://packages.confluent.io/maven/</url>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.fasterxml.woodstox</groupId>
				<artifactId>woodstox-core</artifactId>
				<version>7.1.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>

		<!--Spring-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.session</groupId>
			<artifactId>spring-session-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-aop</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-oxm</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web-services</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka-test</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.retry</groupId>
			<artifactId>spring-retry</artifactId>
		</dependency>

		<!-- swagger -->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>${springdoc-openapi-ui.version}</version>
		</dependency>

		<!--NAV-->
		<dependency>
			<groupId>no.nav.bidrag</groupId>
			<artifactId>bidrag-commons-felles</artifactId>
			<version>${bidrag-felles.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jetty</artifactId>
		</dependency>
		<dependency>
			<groupId>no.nav.bidrag</groupId>
			<artifactId>bidrag-transport-felles</artifactId>
			<version>${bidrag-felles.version}</version>
		</dependency>

		<!--XML handling dependencies-->
		<!--XML-->
		<dependency>
			<groupId>jakarta.xml.ws</groupId>
			<artifactId>jakarta.xml.ws-api</artifactId>
			<version>${jakarta.xml.ws-api.version}</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.ws</groupId>
			<artifactId>jaxws-rt</artifactId>
			<version>${jaxws.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.ws</groupId>
			<artifactId>jaxws-ri</artifactId>
			<version>${jaxws.version}</version>
			<type>pom</type>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>

		<!-- Database -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
		</dependency>
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-database-postgresql</artifactId>
		</dependency>


		<!--Diverse-->
		<dependency>
			<groupId>org.jetbrains.kotlin</groupId>
			<artifactId>kotlin-stdlib-jdk8</artifactId>
			<version>${kotlin.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jetbrains.kotlin</groupId>
			<artifactId>kotlin-reflect</artifactId>
		</dependency>
		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
		</dependency>

		<!--Logging-->
		<dependency>
			<groupId>io.github.oshai</groupId>
			<artifactId>kotlin-logging-jvm</artifactId>
			<version>${kotlin-logging-jvm.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
			<version>${logback-encoder.version}</version>
		</dependency>
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-prometheus</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.hypersistence</groupId>
			<artifactId>hypersistence-utils-hibernate-63</artifactId>
			<version>${hypersistence-utils-hibernate.version}</version>
		</dependency>

		<!--Test-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jetbrains.kotlin</groupId>
			<artifactId>kotlin-test-junit5</artifactId>
			<version>${kotlin.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.kotest</groupId>
			<artifactId>kotest-assertions-core-jvm</artifactId>
			<version>${kotest.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.mockk</groupId>
			<artifactId>mockk-jvm</artifactId>
			<version>${mockk.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>no.nav.security</groupId>
			<artifactId>token-validation-spring-test</artifactId>
			<version>${token-support.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>no.nav.bidrag</groupId>
			<artifactId>bidrag-commons-test-felles</artifactId>
			<version>${bidrag-felles.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>postgresql</artifactId>
			<version>${testcontainers.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-contract-wiremock</artifactId>
			<version>${spring-cloud-contract-wiremock.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>


	<build>
		<finalName>app</finalName>
		<sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
		<testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${project.parent.version}</version>
			</plugin>
			<plugin>
				<groupId>org.jetbrains.kotlin</groupId>
				<artifactId>kotlin-maven-plugin</artifactId>
				<version>${kotlin.version}</version>
				<executions>
					<execution>
						<id>compile</id>
						<phase>process-sources</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
					<execution>
						<id>test-compile</id>
						<phase>test-compile</phase>
						<goals>
							<goal>test-compile</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<jvmTarget>${java.version}</jvmTarget>
					<args>
						<arg>-Xjsr305=strict</arg>
					</args>
					<compilerPlugins>
						<plugin>spring</plugin>
					</compilerPlugins>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.jetbrains.kotlin</groupId>
						<artifactId>kotlin-maven-allopen</artifactId>
						<version>${kotlin.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>${maven-antrun-plugin.version}</version>
				<executions>
					<execution>
						<id>ktlint</id>
						<phase>verify</phase>
						<configuration>
							<target name="ktlint">
								<java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
									classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
									<arg value="src/**/*.kt"/>
								</java>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
					<execution>
						<id>ktlint-format</id>
						<phase>validate</phase>
						<configuration>
							<target name="ktlint">
								<java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
									classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
									<jvmarg value="--add-opens"/>
									<jvmarg value="java.base/java.lang=ALL-UNNAMED"/>
									<arg value="-F"/>
									<arg value="src/**/*.kt"/>
								</java>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>com.pinterest.ktlint</groupId>
						<artifactId>ktlint-cli</artifactId>
						<version>${ktlint.version}</version>
					</dependency>
					<!-- additional 3rd party ruleset(s) can be specified here -->
				</dependencies>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>OSX</id>
			<activation>
				<os>
					<name>Mac OS X</name>
				</os>
			</activation>
			<properties>
				<profile.default.on>false</profile.default.on>
			</properties>
			<repositories>
				<repository>
					<id>nexus-internal-release</id>
					<url>https://repo.adeo.no/repository/maven-release</url>
				</repository>
				<repository>
					<id>nexus-internal-mirror</id>
					<url>https://repo.adeo.no/repository/maven-public</url>
				</repository>
			</repositories>
		</profile>
		<profile>
			<id>default</id>
			<activation>
				<property>
					<name>profile.default.on</name>
					<value>true</value>
				</property>
			</activation>
			<repositories>
				<repository>
					<id>github</id>
					<url>https://maven.pkg.github.com/navikt/bidrag-felles</url>
				</repository>
			</repositories>
		</profile>
	</profiles>
</project>
